--- a/vagrant/package.json
+++ b/vagrant/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "babel-core": "^6.18.2",
     "babel-preset-es2015": "^6.18.0",
-    "babelify": "^7.3.0",
     "babel-preset-react": "^6.16.0",
-    "browserify": "^13.1.1",
+    "babelify": "^7.3.0",
+    "babel-loader": "^6.2.8",
+    "gulp": "^3.9.1",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "webpack": "^1.13.3"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "jsxbuild": "browserify -t [ babelify --presets [ react ] ] main.js -o bundle.js"
   },
   "author": "Michal Frystacky",
   "license": "MIT"
