--- a/vagrant/package.json
+++ b/vagrant/package.json
@@ -14,9 +14,11 @@
     "react-dom": "^15.4.1",
     "webpack": "^1.13.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "node-check-updates": "*"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michal Frystacky",
   "license": "MIT"
