--- a/vagrant/package.json
+++ b/vagrant/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
+
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
     "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
-    "babel-loader": "^6.2.8",
     "gulp": "^3.9.1",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "webpack": "^1.13.3"
-  },
-  "devDependencies": {
-    "npm-check-updates": "*"
+    "webpack": "^1.13.3",
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
