--- a/vagrant/package.json
+++ b/vagrant/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "flask-default",
-  "version": "0.0.1",
+  "name": "flask-restaurant",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -20,7 +20,7 @@
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
     "gulp": "^3.9.1",
-    "webpack": "^1.13.3",
+    "webpack": "^1.13.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
