--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,6 @@ vagrant/itemCatalog/static/css/bootstrap-theme.min.css.map
 vagrant/itemCatalog/static/css/bootstrap.css.map
 vagrant/itemCatalog/static/css/bootstrap.min.css.map
 vagrant/itemCatalog/virtualenv/
+
+### Webpack output
+vagrant/itemCatalog/static/js/dist
