--- a/vagrant/package.json
+++ b/vagrant/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
-
+    "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -20,6 +21,7 @@
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
     "gulp": "^3.9.1",
+    "redux-devtools": "^3.3.1",
     "webpack": "^1.13.3"
   },
   "scripts": {
