--- a/vagrant/package.json
+++ b/vagrant/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
+    "expect": "^1.20.2",
     "gulp": "^3.9.1",
     "redux-devtools": "^3.3.1",
     "webpack": "^1.13.3"
