--- a/vagrant/package.json
+++ b/vagrant/package.json
@@ -8,11 +8,12 @@
     "url": "git://https://github.com/MFry/pyItemCatalog.git"
   },
   "dependencies": {
+    "deepfreeze": "^2.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0"
-  },
+  },p
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.18.2",
