--- a/vagrant/package.json
+++ b/vagrant/package.json
@@ -8,7 +8,6 @@
     "url": "git://https://github.com/MFry/pyItemCatalog.git"
   },
   "dependencies": {
-    "deepfreeze": "^2.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.2",
@@ -21,6 +20,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
+    "deep-freeze": "0.0.1",
     "expect": "^1.20.2",
     "gulp": "^3.9.1",
     "redux-devtools": "^3.3.1",
