--- a/vagrant/package.json
+++ b/vagrant/package.json
@@ -2,12 +2,18 @@
   "name": "flask-restaurant",
   "version": "0.1.0",
   "description": "",
+  "babel": {
+    "plugins": [
+      "transform-object-rest-spread"
+    ]
+  },
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git://https://github.com/MFry/pyItemCatalog.git"
   },
   "dependencies": {
+    "babel-preset-stage-2": "^6.22.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.2",
@@ -17,6 +23,7 @@
     "babel": "^6.5.2",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
